--- a/notebooks/1.0-skb-game-log-data-cleansing.ipynb
+++ b/notebooks/1.0-skb-game-log-data-cleansing.ipynb
@@ -3370,7 +3370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3468,15 +3468,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Export as CSV\n",
     "filepath = \"../data/processed/game_log_all.csv\"\n",
-    "df_game_log_all.to_csv(filepath)\n",
-    "\n",
-    "###"
+    "df_game_log_all.to_csv(filepath, index = False)"
    ]
   }
  ],
