--- a/notebooks/2.0-skb-exploratory-analysis.ipynb
+++ b/notebooks/2.0-skb-exploratory-analysis.ipynb
@@ -23,22 +23,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import Data "
+    "# Set Global Variables"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "color_palette = {'eerie_black': '#1C2321', 'cadet_gray': '#7D98A1', 'paynes_gray': '#5E6572', 'powder_blue': '#A9B4C2', 'anti_flash_white': '#EEF1EF'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\sakib\\anaconda3\\envs\\PythonData\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3257: DtypeWarning: Columns (13,14,15,16,20,21,82,84,86,88,94,95,96,97,98,99,100,101,106,107,109,110,112,113,115,116,118,119,121,122,124,125,127,128,130,131,133,134,136,137,139,140,142,143,145,146,148,149,151,152,154,155,157,158) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -60,213 +68,65 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Game_Number</th>\n",
-       "      <th>Day_of_Week</th>\n",
-       "      <th>Visiting_Team_Name</th>\n",
-       "      <th>Visiting_Team_League</th>\n",
-       "      <th>Visiting_Team_Game_Number</th>\n",
-       "      <th>Home_Team_Name</th>\n",
-       "      <th>Home_Team_League</th>\n",
-       "      <th>Home_Team_Game_Number</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Home_Team_Starting_Player_ID_8</th>\n",
-       "      <th>Home_Team_Starting_Player_Name_8</th>\n",
-       "      <th>Home_Team_Starting_Player_Defensive_Position_8</th>\n",
-       "      <th>Home_Team_Starting_Player_ID_9</th>\n",
-       "      <th>Home_Team_Starting_Player_Name_9</th>\n",
-       "      <th>Home_Team_Starting_Player_Defensive_Position_9</th>\n",
-       "      <th>Additional_Information</th>\n",
-       "      <th>Acquisition_Information</th>\n",
        "      <th>Year</th>\n",
+       "      <th>Date</th>\n",
        "      <th>Era</th>\n",
+       "      <th>Visiting_Team_Score</th>\n",
+       "      <th>Home_Team_Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1871-05-04</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Thu</td>\n",
-       "      <td>CL1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>FW1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>mcdej101</td>\n",
-       "      <td>James McDermott</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>kellb105</td>\n",
-       "      <td>Bill Kelly</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>D</td>\n",
        "      <td>1871</td>\n",
+       "      <td>1871-05-04</td>\n",
        "      <td>Pre-1900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1871-05-05</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Fri</td>\n",
-       "      <td>BS1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>WS3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>burrh101</td>\n",
-       "      <td>Henry Burroughs</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>berth101</td>\n",
-       "      <td>Henry Berthrong</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>HTBF</td>\n",
-       "      <td>D</td>\n",
        "      <td>1871</td>\n",
+       "      <td>1871-05-05</td>\n",
        "      <td>Pre-1900</td>\n",
+       "      <td>20</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1871-05-06</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>CL1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>RC1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>birdg101</td>\n",
-       "      <td>George Bird</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>stirg101</td>\n",
-       "      <td>Gat Stires</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>D</td>\n",
        "      <td>1871</td>\n",
+       "      <td>1871-05-06</td>\n",
        "      <td>Pre-1900</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1871-05-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>CL1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "      <td>CH1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>pinke101</td>\n",
-       "      <td>Ed Pinkham</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>zettg101</td>\n",
-       "      <td>George Zettlein</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>D</td>\n",
        "      <td>1871</td>\n",
+       "      <td>1871-05-08</td>\n",
        "      <td>Pre-1900</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1871-05-09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Tue</td>\n",
-       "      <td>BS1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>TRO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>pikel101</td>\n",
-       "      <td>Lip Pike</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>cravb101</td>\n",
-       "      <td>Bill Craver</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>HTBF</td>\n",
-       "      <td>D</td>\n",
        "      <td>1871</td>\n",
+       "      <td>1871-05-09</td>\n",
        "      <td>Pre-1900</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 164 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0        Date  Game_Number Day_of_Week Visiting_Team_Name  \\\n",
-       "0           0  1871-05-04            0         Thu                CL1   \n",
-       "1           1  1871-05-05            0         Fri                BS1   \n",
-       "2           2  1871-05-06            0         Sat                CL1   \n",
-       "3           3  1871-05-08            0         Mon                CL1   \n",
-       "4           4  1871-05-09            0         Tue                BS1   \n",
-       "\n",
-       "  Visiting_Team_League  Visiting_Team_Game_Number Home_Team_Name  \\\n",
-       "0                  NaN                          1            FW1   \n",
-       "1                  NaN                          1            WS3   \n",
-       "2                  NaN                          2            RC1   \n",
-       "3                  NaN                          3            CH1   \n",
-       "4                  NaN                          2            TRO   \n",
-       "\n",
-       "  Home_Team_League  Home_Team_Game_Number  ...  \\\n",
-       "0              NaN                      1  ...   \n",
-       "1              NaN                      1  ...   \n",
-       "2              NaN                      1  ...   \n",
-       "3              NaN                      1  ...   \n",
-       "4              NaN                      1  ...   \n",
-       "\n",
-       "   Home_Team_Starting_Player_ID_8  Home_Team_Starting_Player_Name_8  \\\n",
-       "0                        mcdej101                   James McDermott   \n",
-       "1                        burrh101                   Henry Burroughs   \n",
-       "2                        birdg101                       George Bird   \n",
-       "3                        pinke101                        Ed Pinkham   \n",
-       "4                        pikel101                          Lip Pike   \n",
-       "\n",
-       "   Home_Team_Starting_Player_Defensive_Position_8  \\\n",
-       "0                                             8.0   \n",
-       "1                                             9.0   \n",
-       "2                                             7.0   \n",
-       "3                                             5.0   \n",
-       "4                                             3.0   \n",
-       "\n",
-       "  Home_Team_Starting_Player_ID_9 Home_Team_Starting_Player_Name_9  \\\n",
-       "0                       kellb105                       Bill Kelly   \n",
-       "1                       berth101                  Henry Berthrong   \n",
-       "2                       stirg101                       Gat Stires   \n",
-       "3                       zettg101                  George Zettlein   \n",
-       "4                       cravb101                      Bill Craver   \n",
-       "\n",
-       "  Home_Team_Starting_Player_Defensive_Position_9 Additional_Information  \\\n",
-       "0                                            9.0                    NaN   \n",
-       "1                                            8.0                   HTBF   \n",
-       "2                                            9.0                    NaN   \n",
-       "3                                            1.0                    NaN   \n",
-       "4                                            6.0                   HTBF   \n",
-       "\n",
-       "  Acquisition_Information  Year       Era  \n",
-       "0                       D  1871  Pre-1900  \n",
-       "1                       D  1871  Pre-1900  \n",
-       "2                       D  1871  Pre-1900  \n",
-       "3                       D  1871  Pre-1900  \n",
-       "4                       D  1871  Pre-1900  \n",
-       "\n",
-       "[5 rows x 164 columns]"
+       "   Year        Date       Era  Visiting_Team_Score  Home_Team_Score\n",
+       "0  1871  1871-05-04  Pre-1900                    0                2\n",
+       "1  1871  1871-05-05  Pre-1900                   20               18\n",
+       "2  1871  1871-05-06  Pre-1900                   12                4\n",
+       "3  1871  1871-05-08  Pre-1900                   12               14\n",
+       "4  1871  1871-05-09  Pre-1900                    9                5"
       ]
      },
      "metadata": {},
@@ -283,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +358,7 @@
        "4  Pre-1900                    0                4       129.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,85 +402,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3101139256.py, line 29)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\sakib\\AppData\\Local\\Temp\\ipykernel_22336\\3101139256.py\"\u001b[1;36m, line \u001b[1;32m29\u001b[0m\n\u001b[1;33m    file_path = f\"../reports/figures/heatmap_{chosen_era.lower().replace(\" \", \"_\")}.png\"\u001b[0m\n\u001b[1;37m                                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Create Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "axis_upper_bound = max(max(df_agg['home_team_score']), max(df_agg['visiting_team_score']))\n",
     "\n",
-    "## Create a heatmap plot\n",
-    "fig = go.Figure(data=go.Heatmap(\n",
-    "        x=df_agg_filtered['home_team_score'].astype(object),\n",
-    "        y=df_agg_filtered['visiting_team_score'].astype(object),\n",
-    "        z=df_agg_filtered['game_count'],\n",
-    "        colorscale='Magma',  # You can choose any colorscale you prefer\n",
-    "        hoverongaps = False))\n",
+    "for era in unique_eras: \n",
+    "    df_agg_filtered = df_agg[df_agg['era'] == era]\n",
     "\n",
-    "## Set axis labels and title\n",
-    "fig.update_layout(\n",
-    "    title=f\"{chosen_era}\",\n",
-    "    xaxis_title='Home Team Score',\n",
-    "    yaxis_title='Visiting Team Score',\n",
-    "    width=1000,\n",
-    "    height=1000,\n",
-    "    yaxis=dict(range = [axis_upper_bound, -0.5], dtick = 1, showgrid = False, zeroline = False),\n",
-    "    xaxis = dict(range = [-0.5, axis_upper_bound], side = 'top', dtick = 1, tickangle=0, showgrid = False, zeroline = False), \n",
-    "    plot_bgcolor='#BCB8B1', \n",
-    "    font=dict(family=\"Courier New\", size=14, color=\"black\"), \n",
-    "    title_x = 0.5, \n",
-    "    title_xanchor = 'center', \n",
-    "    title_y = 0.98\n",
-    ")\n",
+    "    ## Create a heatmap plot\n",
+    "    fig = go.Figure(data=go.Heatmap(\n",
+    "            x=df_agg_filtered['home_team_score'].astype(object),\n",
+    "            y=df_agg_filtered['visiting_team_score'].astype(object),\n",
+    "            z=df_agg_filtered['game_count'],\n",
+    "            colorscale='Magma',  # You can choose any colorscale you prefer\n",
+    "            hoverongaps = False))\n",
     "\n",
-    "fig.update_traces(showscale = False)\n",
+    "    ## Set axis labels and title\n",
+    "    fig.update_layout(\n",
+    "        title=f\"{era}\",\n",
+    "        xaxis_title='Home Team Score',\n",
+    "        yaxis_title='Visiting Team Score',\n",
+    "        width=1000,\n",
+    "        height=1000,\n",
+    "        yaxis=dict(\n",
+    "            range = [axis_upper_bound, -0.5], \n",
+    "            dtick = 1, \n",
+    "            showgrid = False, \n",
+    "            zeroline = False, \n",
+    "            side = 'left'\n",
+    "            ),\n",
+    "        xaxis = dict(\n",
+    "            range = [-0.5, axis_upper_bound], \n",
+    "            side = 'top', \n",
+    "            dtick = 1, \n",
+    "            tickangle=0, \n",
+    "            showgrid = False, \n",
+    "            zeroline = False\n",
+    "            ), \n",
+    "        plot_bgcolor=color_palette['paynes_gray'], \n",
+    "        font=dict(family=\"Courier New\", size=14, color=\"black\"), \n",
+    "        title_x = 0.5, \n",
+    "        title_xanchor = 'center', \n",
+    "        title_y = 0.98\n",
+    "    )\n",
     "\n",
-    "file_path = f\"../reports/figures/heatmap_{chosen_era.lower().replace(\" \", \"_\")}.png\"\n",
-    "fig.write_image(file_path)\n",
-    "\n",
-    "fig.show()"
+    "    fig.update_traces(showscale = False)\n",
+    "    file_path = era.lower().replace(\" \", \"_\")\n",
+    "    file_path = f\"../reports/figures/heatmap_{file_path}.png\"\n",
+    "    fig.write_image(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "!pip install -U kaleido"
+    "df['score_difference'].quantile(0.95)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "axis_upper_bound = max(df['score_difference'])\n",
-    "## Create a density plot of score difference\n",
-    "fig = go.Figure(data=go.Histogram(x=df_filtered['score_difference'], histnorm='density'))\n",
+    "# axis_upper_bound = max(df['score_difference'])\n",
+    "axis_upper_bound = df['score_difference'].quantile(q = 0.99)\n",
+    "for era in unique_eras:\n",
+    "    df_filtered = df[df['era'] == era]\n",
+    "    \n",
+    "    ## Create a density plot of score difference\n",
+    "    fig = go.Figure(data=go.Histogram(x=df_filtered['score_difference'], histnorm='density', marker=dict(color=color_palette['anti_flash_white'])))\n",
     "\n",
-    "fig.update_layout(\n",
-    "    # title='Density Plot of Score Difference',\n",
-    "    xaxis_title='Score Difference',\n",
-    "    yaxis_title='Density',\n",
-    "    width=1000,\n",
-    "    height=400,\n",
-    "    xaxis = dict(range = [0, axis_upper_bound], dtick = 1),\n",
-    "    plot_bgcolor='#BCB8B1',\n",
-    "    font=dict(family=\"Courier New\", size=14, color=\"black\")\n",
-    ")\n",
-    "\n",
-    "fig.show()\n"
+    "    fig.update_layout(\n",
+    "        title= f\"{era}\", \n",
+    "        xaxis_title='Score Difference',\n",
+    "        yaxis_title='Density',\n",
+    "        width=1000,\n",
+    "        height=400,\n",
+    "        xaxis = dict(range = [0, axis_upper_bound], dtick = 1),\n",
+    "        plot_bgcolor=color_palette['paynes_gray'], \n",
+    "        font=dict(family=\"Courier New\", size=14, color=\"black\"), title_x = 0.5, \n",
+    "        title_xanchor = 'center'\n",
+    "    )\n",
+    "    file_path = era.lower().replace(\" \", \"_\")\n",
+    "    file_path = f\"../reports/figures/hist_{file_path}.png\"\n",
+    "    fig.write_image(file_path)\n"
    ]
   }
  ],
@@ -640,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
